# Server_Client_App

./: CMakeLists.txt  README.md
src/: client.cpp  resource.cpp  resource.hpp  resource_availability.hpp  resource_manager.cpp  resource_manager.hpp  server.cpp
